сделал компонент tabs, сделал страницу hotels//wash, где // - это таб

--- a/src/pug/sections/_enter.pug
+++ b/src/pug/sections/_enter.pug
@@ -1,7 +1,8 @@
-section.enter
+section.enter(style="padding-top: 13px")
     .enter__wrapper
-        picture.enter__background
-            img(src="img/main.jpg" alt="Главный корпус РГСУ")
+        video(autoplay muted loop preload).enter__background
+            source(src='video/digital_wave_background_01.webm' type="video/webm")
+            source(src="video/Digital_Wave_Background_01.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"')
         h1 Цифровая среда РГСУ
         p.enter__subtitle Единое информационное <br>и сервисное пространством университета
         button(type="button").enter__button.btn.btn--transparent Войти в личный кабинет
