--- a/src/scss/general/btn.scss
+++ b/src/scss/general/btn.scss
@@ -37,6 +37,13 @@
     padding-top: 12px;
     padding-bottom: 12px;
   }
+
+  &--icon {
+    padding: 21px 20px 21px 73px;
+  }
+  &--border {
+    padding: 16px 24px;
+  }
 }
 
 .btn--regular {
