--- a/src/pug/sections/_parent-cabinet-container.pug
+++ b/src/pug/sections/_parent-cabinet-container.pug
@@ -139,18 +139,18 @@ section.parent-cabinet
         .parent-cabinet__wrapper
             .parent-cabinet__header
                 h2.parent-cabinet__title.title--large Кабинет родителя
-            .parent-cabinet__tabs
-                .parent-cabinet__buttons
-                    button(data-id="perfomance").parent-cabinet__button.parent-cabinet__button--active.btn.btn--light Успеваемость
+            .parent-cabinet__tabs.tabs__container
+                .parent-cabinet__buttons.tabs__buttons
+                    button(data-id="performance").parent-cabinet__button.btn.btn--icon.btn--light.tabs__button.tabs__button--active Успеваемость
                         svg(width="36" height="36")
                             use(href="#studentwork")
-                    button(data-id="finance").parent-cabinet__button.btn.btn--light Финансы
+                    button(data-id="finance").parent-cabinet__button.btn.btn--light.tabs__button.btn--icon Финансы
                         svg(width="36" height="36")
                             use(href="#wallet")
-                    button(data-id="schedules").parent-cabinet__button.btn.btn--light Расписание занятий
+                    button(data-id="schedules").parent-cabinet__button.btn.btn--light.tabs__button.btn--icon Расписание занятий
                         svg(width="36" height="36")
                             use(href="#schedule")
-                    button(data-id="visits").parent-cabinet__button.btn.btn--light Посещения
+                    button(data-id="visits").parent-cabinet__button.btn.btn--light.tabs__button.btn--icon Посещения
                         svg(width="36" height="36")
                             use(href="#clock")
                 include _parent-cabinet-tabs
