--- a/src/pug/sections/_parent-cabinet-tabs.pug
+++ b/src/pug/sections/_parent-cabinet-tabs.pug
@@ -2,10 +2,10 @@
 
 -var days = [30, 31, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 1, 2];
 
-.parent-cabinet__performance.parent-cabinet__tab.parent-cabinet__tab--active(aria-label="Вкладка Успеваемость" id="performance")
+.parent-cabinet__performance.parent-cabinet__tab.tabs__item.tabs__item--active(aria-label="Вкладка Успеваемость" id="performance")
     .parent-cabinet__tab-wrapper
         +table
-.parent-cabinet__finance.parent-cabinet__tab.finance(aria-label="Вкладка Финансы" id="finance")
+.parent-cabinet__finance.parent-cabinet__tab.finance.tabs__item(aria-label="Вкладка Финансы" id="finance")
     p.parent-cabinet__finance-preheader Сведения о взаиморасчетах по договору №1401002038 от 01.08.2014
     p.parent-cabinet__finance-number Ваш УИК: 37.05.01.02.622128
     .parent-cabinet__tab-wrapper
@@ -63,7 +63,7 @@
                     .finance__content-debt-links
                         a(href="#").main__link Задать вопрос
                         a(href="#").main__link Кредит с государственной поддержкой
-.parent-cabinet__schedule.parent-cabinet__tab(aria-label="Вкладка Расписание" id="schedules")
+.parent-cabinet__schedule.parent-cabinet__tab(aria-label="Вкладка Расписание" id="schedules").tabs__item
     .parent-cabinet__tab-wrapper
         .parent-cabinet__tab-togglers
             label(for="iOS").parent-cabinet__tab-toggler.parent-cabinet__tab-toggler--even Четная неделя
@@ -146,7 +146,7 @@
                     tr.schedule__row
                         td.schedule__cell.schedule__cell--divider.schedule__cell--nonactual(colspan="4") 25.03.2020 Суббота: занятий нет 😀
 
-.parent-cabinet__visits.parent-cabinet__tab(aria-label="Вкладка Посещения" id="visits")
+.parent-cabinet__visits.parent-cabinet__tab(aria-label="Вкладка Посещения" id="visits").tabs__item
     .parent-cabinet__tab-wrapper
         .calendar-container
             .calendar-header
