--- a/src/pug/sections/dashboard/_hotels.pug
+++ b/src/pug/sections/dashboard/_hotels.pug
@@ -1,15 +1,16 @@
 section.hotels
-    .hotels__tabs
-        .hotels__buttons
-            button(data-id="late").hotels__tab-btn.hotels__tab-btn--active.btn.btn--light Опоздание в общежитие
-            button(data-id="missing").hotels__tab-btn.btn.btn--light Отсутствие в общежитии
-            button(data-id="guests").hotels__tab-btn.btn.btn--light Посещение гостями
-            button(data-id="washing").hotels__tab-btn.btn.btn--light Стирка
+    .hotels__tabs.tabs__container
+        .hotels__buttons.tabs__buttons
+            button(data-id="late").hotels__tab-btn.tabs__button.tabs__button--active.btn.btn--border Опоздание в общежитие
+            button(data-id="missing").hotels__tab-btn.tabs__button.btn.btn--border Отсутствие в общежитии
+            button(data-id="guests").hotels__tab-btn.tabs__button.btn.btn--border Посещение гостями
+            button(data-id="washing").hotels__tab-btn.tabs__button.btn.btn--border Стирка
         .hotels__tab-container
-            .hotels__tab.hotels__tab--active.hotels__tab--late(id="late")
+            .hotels__tab.tabs__item.tabs__item--active.hotels__tab--late(id="late")
                 .hotels__tab-wrapper
-                    h3.hotels__tab-title Заявка на опоздание
-                    form.hotels__form
+                    .hotels__tab-header
+                        h3.hotels__tab-title Заявка на опоздание
+                    form.hotels__form.form__late
                         .hotels__form-wrapper
                             label.hotels__form-label(for="date") Дата
                             input(type="date" name="date" id="date").hotels__form-input
@@ -20,7 +21,7 @@ section.hotels
                             label.hotels__form-label(for="reason") Причина
                             input(type="text" name="reason" id="reason").hotels__form-input
                         .hotels__form-wrapper.hotels__form-wrapper--approve
-                            p.hotels__form-label Подтверждение
+                            p.hotels__form-approve Подтверждение
                             label(for="approve").hotels__form-file Выбрать файл
                                 svg(width="19" height="20")
                                     use(href="#clip")
@@ -39,9 +40,71 @@ section.hotels
                                     span.hotels__table-col--time 11:23
                                 td.hotels__table-col.hotels__table-col--reason Девушка не отпускала
                                 td.hotels__table-col.hotels__table-col--approve Подтверждено
+                            tr.hotels__table-row
+                                td.hotels__table-col.hotels__table-col--date 22.12.2020
+                                    span.hotels__table-col--time 11:23
+                                td.hotels__table-col.hotels__table-col--reason Девушка не отпускала
+                                td.hotels__table-col.hotels__table-col--notapprove Отклонено
+                            tr.hotels__table-row
+                                td.hotels__table-col.hotels__table-col--date 22.12.2020
+                                    span.hotels__table-col--time 11:23
+                                td.hotels__table-col.hotels__table-col--reason Девушка не отпускала
+                                td.hotels__table-col.hotels__table-col--notapprove Отклонено
+                            tr.hotels__table-row
+                                td.hotels__table-col.hotels__table-col--date 22.12.2020
+                                    span.hotels__table-col--time 11:23
+                                td.hotels__table-col.hotels__table-col--reason Девушка не отпускала
+                                td.hotels__table-col.hotels__table-col--approve Подтверждено
+                            tr.hotels__table-row
+                                td.hotels__table-col.hotels__table-col--date 22.12.2020
+                                    span.hotels__table-col--time 11:23
+                                td.hotels__table-col.hotels__table-col--reason Девушка не отпускала
+                                td.hotels__table-col.hotels__table-col--notapprove Отклонено
+                            tr.hotels__table-row
+                                td.hotels__table-col.hotels__table-col--date 22.12.2020
+                                    span.hotels__table-col--time 11:23
+                                td.hotels__table-col.hotels__table-col--reason Девушка не отпускала
+                                td.hotels__table-col.hotels__table-col--notapprove Отклонено
 
-            .hotels__tab.hotels__tab--missing(id="missing")
+            .hotels__tab.hotels__tab--missing(id="missing").tabs__item
 
-            .hotels__tab.hotels__tab--guests(id="guests")
+            .hotels__tab.hotels__tab--guests(id="guests").tabs__item
 
-            .hotels__tab.hotels__tab--washing(id="washing")
+            .hotels__tab.hotels__tab--washing(id="washing").tabs__item
+                .hotels__tab-wrapper
+                    .hotels__tab-header
+                        h3.hotels__tab-title Заявка на стирку
+                        span.hotels__tab-remains Осталось: 2 раза на этой неделе
+                    form.hotels__form.form__wash
+                        .hotels__form-wrapper
+                            label.hotels__form-label(for="dateWash") Дата
+                            input(type="date" name="dateWash" id="dateWash").hotels__form-input
+                        .hotels__form-wrapper
+                            label.hotels__form-label(for="timeWash") Время
+                            input(type="time" name="timeWash" id="timeWash").hotels__form-input
+                        button(type="submit").hotels__form-submit.btn.btn--blue Отправить
+
+                .hotels__tab-wrapper
+                    .hotels__tab-header
+                        h3.hotels__tab-title Расписание на сегодня
+                        span.hotels__tab-available 5 свободных мест
+                    table.hotels__table
+                        tr.hotels__table-row
+                            td.hotels__table-col 11:00
+                            td.hotels__table-col.hotels__table-col--name Мазеин Константин Викторович
+                        tr.hotels__table-row
+                            td.hotels__table-col 11:00
+                            td.hotels__table-col.hotels__table-col--name
+                                a(href="#") Софинская Виолетта Васильевна
+                        tr.hotels__table-row
+                            td.hotels__table-col 11:00
+                            td.hotels__table-col.hotels__table-col--name
+                                a(href="#") Жуков Руслан Валерьевич
+
+                .hotels__tab-wrapper
+                    .hotels__tab-header
+                        h3.hotels__tab-title Средняя загрузка
+                        span.hotels__tab-today
+                        button.hotels__tab-week Неделя
+                    .hotels__chart.chart
+                        canvas#myChart
